@@ -1,0 +1,29 @@
+<!--
+Copyright (c) 2002-2008 Infrae. All rights reserved.
+See also LICENSE.txt
+Version of this file: $Revision: 1.2 $
+-->
+<h1 tal:replace="structure here/manage_page_header">Header</h1>
+
+<h2 tal:define="manage_tabs_message options/manage_tabs_message | nothing"
+    tal:replace="structure here/manage_tabs">Tabs</h2>
+
+<h4><a href="../manage_services">Silva Services</a></h4>
+
+<h2 i18n:translate="">
+  Partial rebuild of the Silva catalog
+</h2>
+
+<p class="form-help">
+   Reindex a subtree of the site in the Silva Catalog. 
+   For big trees this may take a long time.
+</p>
+<form action="." method="post">
+  <div class="form-text">Absolute path to subtree to reindex:</div>
+  <input class="form-element" type="text" name="path" />
+  <br />
+  <input type="submit" name="reindex_subtree:method" value="rebuild"
+      i18n:attributes="value" />
+</form>
+
+<h1 tal:replace="structure here/manage_page_footer">Footer</h1>
